Fix for Mozilla, because it does not support the `overflow-x: overlay` property
issue: 92545

--- a/src/components/grid-smart-css/grid-smart-css.scss
+++ b/src/components/grid-smart-css/grid-smart-css.scss
@@ -57,7 +57,9 @@ gx-grid-smart-css {
     }
     @media (pointer: coarse) {
       #{$gridContentSelector} {
+        overflow-x: auto; // Fix for Mozilla, because it only accepts: visible, hidden, auto or scroll
         overflow-x: overlay;
+        scrollbar-width: none;
 
         &::-webkit-scrollbar {
           width: 0px;
